# mu-epub

./: .gitignore  AGENTS.md  API_ISSUES.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: epub_bench.rs
crates/mu-epub-embedded-graphics/: Cargo.toml
crates/mu-epub-embedded-graphics/src/: lib.rs
crates/mu-epub-render/: Cargo.toml
crates/mu-epub-render/src/: lib.rs  render_engine.rs  render_ir.rs  render_layout.rs
crates/mu-epub-render/tests/: docs.rs
crates/mu-epub-render/tests/docs/: pagination.rs
docs/: architecture.md  benchmarks.md  bugs.md  compliance.md  datasets.md  memory-management.md  render-api.md  render-migration.md  render.md  spec-compliance.md
scripts/datasets/: bootstrap.sh  expectations.tsv  list_epubs.sh  validate.sh
src/: async_api.rs  book.rs  css.rs  error.rs  layout.rs  lib.rs  metadata.rs  navigation.rs  render_prep.rs  spine.rs  streaming.rs  tokenizer.rs  validate.rs  zip.rs
tests/: integration.rs  regression.rs
tests/fixtures/bench/: README.md  SHA256SUMS  pg1661-sherlock-holmes.epub  pg2701-moby-dick.epub
